# mir_public_frame

./: README.md
mir_public/: Cargo.toml  OPERATION_GUIDE.md  PROJECT_ANALYSIS.md  poc
mir_public/src/: callbacks.rs  main.rs
mir_public/src/app/: mod.rs
mir_public/src/classify/: ops.rs
mir_public/src/collect/: mir.rs
mir_public/src/graph/: builder.rs  ir.rs
mir_public/src/io/: writer.rs
mir_public/src/settings/: mod.rs
