[package]
name = "mir_public"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
env_logger = "0.11"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "mir_public"
path = "src/main.rs"

[[bin]]
name = "cargo-mir-public"
path = "src/bin/cargo-taint-ana.rs"

[package.metadata.rust-analyzer]
rustc_private = true
